Spacing fixes

--- a/assets/_base.scss
+++ b/assets/_base.scss
@@ -8261,6 +8261,7 @@ body {
 
 .section-wrap:last-of-type .main-content {
   padding-bottom: 3em;
+  padding-top: 3em;
 }
 
 #footer-content {
